examples/test/testpolicy19013.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19013
  namespace: namespace371
spec:
  podSelector:
    matchLabels:
      key21: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value49
          key36: value43
          key4: value16
      podSelector:
        matchLabels:
          key27: value5
